--- a/.gitignore
+++ b/.gitignore
@@ -53,3 +53,6 @@ fabric.properties
 
 # Android studio 3.1+ serialized cache file
 .idea/caches/build_file_checksums.ser
+
+id2203-ass1-epfd/.idea
+id2203-ass2-broadcast/.idea
